force-app/main/default/objects/Feature_Flag_Enabled_For__mdt/Feature_Flag_Enabled_For__mdt.object-meta.xml
<CustomObject>
    <label>Feature Flag Enabled For</label>
    <pluralLabel>Feature Flags Enabled For</pluralLabel>
</CustomObject>