force-app/main/default/objects/Feature_Flag_Enabled_For__mdt/fields/Feature_Flag__c.field-meta.xml
<CustomField>
    <fullName>Feature_Flag__c</fullName>
    <label>Feature Flag</label>
    <referenceTo>Feature_Flag__mdt</referenceTo>
    <relationshipLabel>Feature Flags Enabled For</relationshipLabel>
    <relationshipName>Feature_Flags_Enabled_For</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>