force-app/main/default/objects/Feature_Flag_Enabled_For__mdt/fields/isEnabled__c.field-meta.xml
<CustomField>
    <fullName>isEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>