force-app/main/default/objects/Feature_Flag_Enabled_For__mdt/fields/Permission_Set_Id__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Id__c</fullName>
    <label>Permission Set Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>